feat: add pagination for GET sports fields
